Fixed flickering

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -94,7 +94,7 @@ body {
 
 #opening {
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
 }
